# rust-moray

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: batch.rs  createbucket.rs  findobjects.rs  listbuckets.rs  putobject.rs  sql.rs
src/: buckets.rs  client.rs  lib.rs  meta.rs  objects.rs
