[package]
name = "moray"
version = "0.9.3"
authors = ["Rui Loura <rui@joyent.com>",
           "Jon Anderson <jon.andereson@joyent.com"]
edition = "2018"

[dependencies]
cueball = "0.3.1"
cueball-static-resolver = "0.3.0"
cueball-tcp-stream-connection = "0.3.0"

rust_fast = { git = "https://github.com/joyent/rust-fast", tag="v0.2.0" }
libmanta = { git = "https://github.com/joyent/rust-libmanta", tag="v0.7.0" }

serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
slog = { version = "2.4.1", features = [ "max_level_trace" ] }
slog-bunyan = { git = "https://github.com/kellymclaughlin/bunyan", branch = "build-on-smartos" }

uuid = {version = "0.7.4", features = ["v4"] }
trust-dns-resolver = "0.11.1"
unicode-normalization = "=0.1.5"

# Until certain patches for diesel are checked into a version rust-libmanta will
# need this patch section, and so will any of it's dependents.
[patch.crates-io]
diesel = { git = 'https://github.com/diesel-rs/diesel' }
diesel_derives = { git = "https://github.com/diesel-rs/diesel" }


[dev-dependencies]
slog-term = "2.4.0"
rand = "0.6.4"
quickcheck = "0.8.0"

[features]
default = []
postgres = ["libmanta/postgres"]
sqlite = ["libmanta/sqlite"]
